<resources>
    <string name="app_name">OpenSesame</string>
    <string name="empty">EMPTY LOREM, SHOULD NOT APPEAR</string>
    <string name="add_button_ready">Add</string>
    <string name="add_button_processing">Cancel</string>
    <string name="menu_button">Menu</string>
    <string name="username">username</string>
    <string name="view_profile">View Profile</string>
    <string name="todo">TODO</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="text_size">Text size:</string>
    <string name="key_text_size">key for text size?</string>
    <string name="summary_text_size">Choose size of font.</string>
    <string name="title_text_size">Text Size</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="sign_up_here_button">No Account? Sign up here!</string>
    <string name="back_to_login_button">Already have an account? Login here.</string>
    <string name="text_and_colors">Application Theme</string>
    <string name="text_options">Text Options</string>
    <string name="font_size">Font Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name ="color_options">Color Options</string>
    <string name="invert_colors">Invert Colors</string>
    <string name="high_contrast">High Contrast</string>
    <string name="color_blind_friendly">Color-Blind Friendly</string>
    <string name="map_options">Map Options</string>
    <string name="account_options">Account Options</string>
    <string name="show_compass">Show Compass</string>
    <string name="show_zoom_controls">Show Zoom Controls</string>
    <string name="satellite_hybrid">Satellite Map View</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_color">Select Color Theme</string>
    <string name="email_field_hint">username@email.com</string>
    <string name="password_field_hint">*******</string>
    <string name="create_a_report_header">Create a report</string>
    <string name="create_a_report_issue_header">What is the issue?</string>
    <string name="create_a_report_info_header">Explain the problem in more detail here</string>
    <string name="create_a_report_title_hint">Briefly title the issue here</string>
    <string name="create_a_report_info_hint">Explanation here</string>
    <string name="create_a_report_create_button">Create</string>
    <string name="create_a_report_category_hint">Category here</string>
    <string name="create_a_report_category_header">Optionally, choose a category:</string>
    <string name="create_a_report_location_hint">Specify exact location here</string>
    <string name="create_a_report_location_header">Provide detail of the exact location</string>
    <string name="report_detail_title_dummy">Title Here</string>
    <string name="report_detail_info_header">Description:</string>
    <string name="report_detail_location_info_header">Location details:</string>
    <string name="add_report_message_button">Add additional information</string>
    <string name="create_a_message_header">Add a message</string>
    <string name="account_title">Account</string>
    <string name="report_list">My Reports</string>
    <string name="reportDetailEditButton">Save</string>
    <string name="work_order_button_text">Create Work Order</string>
    <string name="map_theme">Map Theme</string>
    <string name="normal">Standard</string>
    <string name="UCF_theme">UCF</string>
    <string name="monochrome_theme">Monochrome</string>
    <string name="night_theme">Night</string>
    <string name="dark_blue_theme">Dark Blue</string>
    <string name="guest_button">Continue as Guest</string>
    <string-array name="sort_options">
        <item>Distance</item>
        <item>Title</item>
        <item>Description</item>
        <item>Location</item>
    </string-array>
    <string-array name="sort_order">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>
